# rigid-body-motion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/RBMotion/: FKSolverInterface.h  IKSolverInterface.h  Kine.h  RBLink.h  RBTreeParser.h  RobotInterface.h  Utils.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  FKSolverInterface.cpp  Kine.cpp  RBLink.cpp  RBTreeParser.cpp  RobotInterface.cpp  Utils.cpp
test/: 2dofTest.cpp  2dofURDF.h  CMakeLists.txt  UtilsTest.cpp  Vicarious.cpp  Vicarious.h  VicariousRobot.cpp  VicariousRobot.h  quatTest.cpp  quatTut.cpp  sampleTest.cpp  sampleURDF.h  vicariousTest.cpp  vicariousTestLeft.cpp  vicariousTestMove.cpp  vicariousURDF.h
